

2003.Sep.04 (0.9.13) [cvs]
  * Fixed incorrect tag in HTML documentation.  (Bad results in IE)

  * Fixed typo regarding "savedir" in README.

  * 'printcfg' options not displayed in usage, except on Win32.

  * Moved available language listing to its own usage, shown when
    "--lang" called incorrectly, or as "--lang list" or "--lang help".
    (Suggested by Ben Armstrong)


2003.Aug.18 (0.9.12)
  * Replaced "efont-serif" fonts with those from the 'ttf-freefont' package,
    for better support of ISO8859-13 symbols (e.g., for Lithuanian).
    Fonts copyright the Free Software Foundation.
    Thanks to Mantas Kriauciunas <monte@mail.lt> for the tip.

  * Made main event loop ignore motion events if the loop has spun too long.
    (Fixes problems where shape or stamp tools take forver to 'catch up' with
    the mouse; especially noticable on slow machines over remote X display.)

  * Walloon translation.
    Pablo Saratxaga <pablo@walon.org>
  
  * Translated to Russian
    Dmitriy Ivanov <ace22b@myrealbox.com>

  * Translated to Malay
    Muhammad Najmi Ahmad Zabidi <md_najmi@yahoo.com>

  * French translation update.
    Jacques Chion <Jacques.Chion@wanadoo.fr>

  * Chinese translation update.
    Wang Jian <lark@linux.net.cn>
  
  * If gnome-config is not found, it doesn't necessarily mean Gnome isn't being
    used!  Makefile will now fall-back and assume $GNOME_PREFIX should be /usr,
    so that the launcher icon gets installed into the Gnome menu.
  
  * Added some "#error" directives to give verbose output regarding missing
    library header files.  (Typical cause of this symptom is forgetting to
    install dev. packages; e.g., installed "SDL.rpm", but not "SDL-dev.rpm")

  * Fixed Mac OS X #include typo.
    Darrell Walisser <walisser@mac.com>

  * Fixed bug where non-translated stamp description text would get drawn
    right-to-left after the kudos text (e.g., "Great!") goes away.
    Thanks to Itai <Itais@newmail.net>
  