@@ -18,6 +18,9 @@ http://www.newbreedsoftware.com/tuxpaint/
     "--lang" called incorrectly, or as "--lang list" or "--lang help".
     (Suggested by Ben Armstrong)
 
+  * Reorganized usage display
+    (Suggested by Ben Armstrong)
+
 
 2003.Aug.18 (0.9.12)
   * Replaced "efont-serif" fonts with those from the 'ttf-freefont' package,
